tests/regression/error/hw4_error12.correct
operator '||' requires boolean, found none
